* Version 0.50: parseYaml and emitYaml now work with Unicode Strings.

--- a/HsSyck/HsSyck.cabal
+++ b/HsSyck/HsSyck.cabal
@@ -1,5 +1,5 @@
 Name:                HsSyck
-Version:             0.45
+Version:             0.50
 Cabal-version:       >= 1.2.3
 Category:            Text, Pugs
 Synopsis:            Fast, lightweight YAML loader and dumper
@@ -29,16 +29,16 @@ Flag SybInBase
 
 Library
     if flag(SybInBase)
-        Build-Depends: base>=3 && <4, bytestring>=0.9.0.1
+        Build-Depends: base>=3 && <4, bytestring>=0.9.0.1, utf8-string>=0.3
     else
-        Build-Depends: base>=4, bytestring>=0.9.0.1, syb
+        Build-Depends: base>=4, bytestring>=0.9.0.1, syb, utf8-string>=0.3
 
     exposed-modules: Data.Yaml.Syck
 
-    extensions: ForeignFunctionInterface, MagicHash, RecursiveDo,
-                DeriveDataTypeable, TypeSynonymInstances, PatternGuards
-
     ghc-options: -funbox-strict-fields
+
+    extensions: ForeignFunctionInterface, MagicHash,
+                DeriveDataTypeable, TypeSynonymInstances, PatternGuards, RecursiveDo
 
     c-sources: syck/bytecode.c syck/emitter.c syck/gram.c syck/handler.c
                syck/implicit.c syck/node.c syck/syck.c syck/syck_st.c
