--- a/HsSyck/HsSyck.cabal
+++ b/HsSyck/HsSyck.cabal
@@ -31,7 +31,7 @@ Library
     if flag(SybInBase)
         Build-Depends: base>=3 && <4, bytestring>=0.9.0.1, utf8-string>=0.3
     else
-        Build-Depends: base>=4, bytestring>=0.9.0.1, syb, utf8-string>=0.3
+        Build-Depends: base>=4 && <6, bytestring>=0.9.0.1, syb, utf8-string>=0.3
 
     exposed-modules: Data.Yaml.Syck
 
