--- a/Pugs/Pugs.cabal
+++ b/Pugs/Pugs.cabal
@@ -158,17 +158,18 @@ flag Perl5
 executable pugs
     main-is:            Main.hs
     hs-source-dirs:     src
+    ld-options:          -L/usr/lib -L/opt/local/lib
 
     build-depends:
-        base >= 3 && < 5, haskell98, filepath, mtl, parsec < 3.0.0, network,
+        base >= 4 && < 5, haskell98, filepath, mtl < 2.0.0.0, parsec < 3.0.0, network,
         pretty, time, random, process, containers, bytestring,
-        array, directory, utf8-string, binary, haskeline >= 0.2.1, FindBin,
+        array, directory, utf8-string, binary, haskeline >= 0.6.4.0, FindBin,
         control-timeout >= 0.1.2,
 
         MetaObject       >= 0.0.4,
         HsParrot         >= 0.0.2,
         pugs-compat      >= 0.0.5,
-        pugs-DrIFT       >= 2.2.3.0,
+        pugs-DrIFT       >= 2.2.3.2,
         stringtable-atom >= 0.0.4,
         HsSyck           >= 0.44,
         stm              >= 2.1.2.1
