--- a/Pugs/Pugs.cabal
+++ b/Pugs/Pugs.cabal
@@ -1,5 +1,5 @@
 Name            : Pugs
-Version         : 6.2.13.16
+Version         : 6.2.13.20110519
 license         : BSD3
 license-file    : LICENSE
 cabal-version   : >= 1.2.3
@@ -161,7 +161,7 @@ executable pugs
     ld-options:          -L/usr/lib -L/opt/local/lib
 
     build-depends:
-        base >= 4 && < 5, haskell98, filepath, mtl < 2.0.0.0, parsec < 3.0.0, network,
+        base >= 4 && < 5, haskell98, filepath, mtl < 2.0.0.0, parsec >= 3.0.0.0, network,
         pretty, time, random, process, containers, bytestring,
         array, directory, utf8-string, binary, haskeline >= 0.6.4.0, FindBin,
         control-timeout >= 0.1.2,
