--- a/Pugs/Pugs.cabal
+++ b/Pugs/Pugs.cabal
@@ -158,7 +158,7 @@ flag Perl5
 executable pugs
     main-is:            Main.hs
     hs-source-dirs:     src
-    ld-options:          -L/usr/lib -L/opt/local/lib
+    extra-lib-dirs:     /usr/lib /opt/local/lib
 
     build-depends:
         base >= 4 && < 5, haskell98, filepath, mtl < 2.0.0.0, parsec >= 3.0.0.0, network,
