* De-haskell98 for HsParrot.

--- a/HsParrot/HsParrot.cabal
+++ b/HsParrot/HsParrot.cabal
@@ -1,5 +1,5 @@
 Name:                HsParrot
-Version:             0.0.2
+Version:             0.0.2.20110925
 Category:            Language, Pugs
 Synopsis:            Haskell integration with Parrot virtual machine
 Description:         Haskell integration with Parrot virtual machine
@@ -14,7 +14,7 @@ Copyright:           Audrey Tang, 2008
 Exposed-modules:     Language.PIR
 Other-modules:       Language.PIR.Emit
 
-Build-Depends:       base, haskell98, bytestring>=0.9.0.1, pretty, HsSyck,
+Build-Depends:       base > 4 && < 5, bytestring>=0.9.0.1, pretty, HsSyck,
                      pugs-DrIFT
 Build-Type:          Simple
 Tested-With:         GHC==6.8.2, GHC==6.8.3
