--- a/HsParrot/HsParrot.cabal
+++ b/HsParrot/HsParrot.cabal
@@ -11,20 +11,21 @@ Author:              Audrey Tang
 Maintainer:          audreyt@audreyt.org
 Copyright:           Audrey Tang, 2008
 
-Exposed-modules:     Language.PIR
-Other-modules:       Language.PIR.Emit
-
-Build-Depends:       base > 4 && < 5, bytestring>=0.9.0.1, pretty, HsSyck,
-                     pugs-DrIFT
 Build-Type:          Simple
 Tested-With:         GHC==6.8.2, GHC==6.8.3
 
-Extensions:          TypeSynonymInstances, OverlappingInstances,
-                     ExistentialQuantification, MultiParamTypeClasses,
-                     DeriveDataTypeable, FlexibleInstances, Rank2Types,
-                     PatternGuards
-
+cabal-version:       >= 1.2.3
 -- ghc-options:         -F -pgmF pugs-DrIFT -optF-pgmF
 data-files:          Changes
-hs-source-dirs:      src
+
+Library
+    Extensions:          TypeSynonymInstances, OverlappingInstances,
+                         ExistentialQuantification, MultiParamTypeClasses,
+                         DeriveDataTypeable, FlexibleInstances, Rank2Types,
+                         PatternGuards
+    hs-source-dirs:      src
+    Build-Depends:       base > 4 && < 5, bytestring>=0.9.0.1, pretty, HsSyck,
+                         pugs-DrIFT
+    Exposed-modules:     Language.PIR
+    Other-modules:       Language.PIR.Emit
 
