--- a/Pugs/Pugs.cabal
+++ b/Pugs/Pugs.cabal
@@ -161,7 +161,7 @@ executable pugs
     extra-lib-dirs:     /usr/lib /opt/local/lib
 
     build-depends:
-        base >= 4 && < 5, haskell98, filepath, mtl < 2.0.0.0, parsec >= 3.0.0.0, network,
+        base >= 4 && < 5, filepath, mtl < 2.0.0.0, parsec >= 3.0.0.0, network,
         pretty, time, random, process, containers, bytestring,
         array, directory, utf8-string, binary, haskeline >= 0.6.4.0, FindBin,
         control-timeout >= 0.1.2,
