* Add ncurses/libperl dep notes (ingy++) and fix "make" to simply use cabal.

--- a/Pugs/Makefile
+++ b/Pugs/Makefile
@@ -1,6 +1,6 @@
 pugs ::
-	ghc ./dist/build/pugs/pugs-tmp/cbits/*o -package mtl-1.1.1.1 -idist/build/autogen -isrc --make src/Main.hs 
-	mv src/Main pugs
+	cabal build
+	cp dist/build/pugs/pugs pugs
 
 ghci ::
-	ghci ./dist/build/pugs/pugs-tmp/cbits/*o -package mtl-1.1.1.1 -idist/build/autogen -isrc src/Main.hs 
+	ghci ./dist/build/pugs/pugs-tmp/cbits/*o -idist/build/autogen -isrc src/Main.hs 
