--- a/Pugs/Makefile
+++ b/Pugs/Makefile
@@ -4,3 +4,9 @@ pugs ::
 
 ghci ::
 	ghci ./dist/build/pugs/pugs-tmp/cbits/*o -idist/build/autogen -isrc src/Main.hs 
+
+clean :: distclean
+
+distclean purge ::
+	rm -fr Pugs.buildinfo dist/ perlxsi.c
+
