--- a/Pugs/Makefile
+++ b/Pugs/Makefile
@@ -1,6 +1,17 @@
-pugs ::
+INSTALLBIN = $(shell perl -MConfig -e 'print $$Config::Config{installbin}')
+
+pugs: dist/build/pugs/pugs
+	cp $< $@
+
+dist/build/pugs/pugs: dist/setup-config src/Pugs/*
 	cabal build
-	cp dist/build/pugs/pugs pugs
+
+dist/setup-config:
+	cabal configure
+
+install :: pugs
+	cp $< $(INSTALLBIN)/pugs
+	cp $< $(INSTALLBIN)/perl6
 
 ghci ::
 	ghci ./dist/build/pugs/pugs-tmp/cbits/*o -idist/build/autogen -isrc src/Main.hs 
@@ -8,5 +19,5 @@ ghci ::
 clean :: distclean
 
 distclean purge ::
-	rm -fr Pugs.buildinfo dist/ perlxsi.c
+	rm -fr pugs Pugs.buildinfo dist/ perlxsi.c
 
